--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playground Text Grid</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./javascript/index.js"></script>
   </body>
 </html>
